ART4-25889 Add Junit Code coverage
- fix sonarqube issues for pcp-ingestion service