@@ -26,18 +26,13 @@
 		<docker.plugin.version>0.2.3</docker.plugin.version>
 		<!-- SonarQube properties -->
 		<jacoco.version>0.8.5</jacoco.version>
-		<jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
-		<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
-		<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
-		<sonar.projectKey>${project.name}</sonar.projectKey>
-		<sonar.projectName>PCP Search Service</sonar.projectName>
+		<sonar.projectKey>pcp-member-ingestion</sonar.projectKey>
+		<sonar.projectName>pcp member ingestion service</sonar.projectName>
 		<sonar.language>java</sonar.language>
 		<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
 		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
 		<sonar-jacoco-listeners.version>1.4</sonar-jacoco-listeners.version>
-		<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
-		<sonar.surefire.reportsPath>target/surefire-reports</sonar.surefire.reportsPath>
-		<sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
+		<sonar.coverage.jacoco.xmlReportPath>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPath>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -250,75 +245,67 @@
 					</execution>
 				</executions>
 			</plugin>
-			<!-- Surefire unit test plugin -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
-				<configuration>
-					<argLine>--illegal-access=permit</argLine>
-					<properties>
-						<property>
-							<name>listener</name>
-							<value>org.sonar.java.jacoco.JUnitListener</value>
-						</property>
-					</properties>
-					<testFailureIgnore>true</testFailureIgnore>
-				</configuration>
-			</plugin>
-			<!-- Failsafe integration test plugin -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.22.2</version>
-				<configuration>
-					<argLine>--illegal-access=permit -Xmx1024m -XX:MaxPermSize=256m}</argLine>
-					<properties>
-						<property>
-							<name>listener</name>
-							<value>org.sonar.java.jacoco.JUnitListener</value>
-						</property>
-					</properties>
-					<!-- Put failsafe reports with surefire to have access to tests failures/success 
-						reports in sonar -->
-					<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-				</configuration>
-			</plugin>
+			<!-- Jacoco integration test plugin -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>0.8.5</version>
-				<executions>
-					<!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info 
-						to be passed to the JVM hosting the code being tested. -->
-					<execution>
-						<id>prepare-ut-agent</id>
-						<phase>process-test-classes</phase>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-						<configuration>
-							<destFile>${sonar.jacoco.reportPath}</destFile>
-							<propertyName>jacoco.agent.ut.arg</propertyName>
-							<append>true</append>
-						</configuration>
-					</execution>
-					<!-- Prepares a variable, jacoco.agent.it.arg, that contains the info 
-						to be passed to the JVM hosting the code being tested. -->
-					<execution>
-						<id>prepare-it-agent</id>
-						<phase>pre-integration-test</phase>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-						<configuration>
-							<destFile>${sonar.jacoco.itReportPath}</destFile>
-							<propertyName>jacoco.agent.it.arg</propertyName>
-							<append>true</append>
-						</configuration>
-					</execution>
-				</executions>
+			  <configuration>
+		        <excludes>
+		            <exclude>com/delta/pcpingestion/App.java</exclude>
+		             <exclude>com/delta/pcpingestion/configuration/**</exclude>
+		             <exclude>com/delta/pcpingestion/enums/**</exclude>
+		            <exclude>lombok/**</exclude>
+		        </excludes>
+		     </configuration>
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<resources>
+					<resource>
+						<directory>src/main/resources</directory>
+					</resource>
+					<resource>
+						<targetPath>META-INF</targetPath>
+						<directory>src/main/resources/META-INF</directory>
+					</resource>
+				</resources>
+			</build>
+		</profile>
+		<profile>
+			<id>coverage</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>report</id>
+								<goals>
+									<goal>report</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
